--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,14 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+svg {
+  border:1px solid #d0d0d0;
+}
+text {
+  font-size: 16px;
+  fill: #888;
+}
+path, line {
+  stroke: #888;
+}
